02-aks-advanced-configuration/k8s/api-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-b-service
  labels:
    app: api-b
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: api-b
  type: ClusterIP
